<resources>
    <string name="app_name">MySelfApps_UTS</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>

    <!--Menu Buttom Navigation-->
    <string name="home">Home</string>
    <string name="activity">Daily Activity</string>
    <string name="gallery">Gallery</string>
    <string name="music">Music</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>

    <!--Fragment Home-->
    <string name="fhome_nama">Guntur Maulana Ibrahim</string>
    <string name="fhome_lahir">Lahir di Bandung,04 Juli 1988</string>
    <string name="fhome_desk">Saya merupakan anak pertama dari dua bersaudara.
        Memiliki adik laki-laki yang berjarak 2 tahun dibawah saya.
    </string>

    <string name="fhome_ketertarikan">Interest . . .</string>
    <string name="fhome_hobi"> Hobby saya adalah berenang dan bermain game walau renang saya tidak jago jago amat tapi bisa lah
        untuk renang dari ujung ke ujung, saya suka makakanan yang pedas dan minuman yang manis.
        Saya bercita-cita untuk menjadi PNS dibidang saya sekarang ini.
    </string>


    <!--    Fragment Daily -->
    <string name="daily_my_daily">My Daily Activity</string>
    <string name="my_music">My Music n Video</string>

    <!--    Fragment Account -->
    <string name="account_contactme">Contact Me</string>
    <string name="account_phone_number">0896-5341-0700</string>
    <string name="account_findme">Find Me Here</string>
</resources>