<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dimen32">

    <LinearLayout
        android:layout_width="357dp"
        android:layout_height="616dp"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/merienda_one"
                android:text="@string/account_findme"
                android:textColor="@color/texUtama"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.889"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.334" />

            <TextView
                android:id="@+id/id_nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fhome_nama"
                android:textColor="@color/texUtama"
                android:textSize="@dimen/dimen10"
                app:fontFamily="@font/merienda_one"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.138"
                app:layout_constraintStart_toEndOf="@+id/id_profileGuntur"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/id_profileGuntur"
                android:layout_width="133dp"
                android:layout_height="140dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/profile_guntur" />

            <TextView
                android:id="@+id/id_lahir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fhome_lahir"
                android:textColor="@color/texUtama"
                android:textSize="@dimen/dimen8"
                app:fontFamily="@font/merienda_one"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.197"
                app:layout_constraintStart_toEndOf="@+id/id_profileGuntur"
                app:layout_constraintTop_toBottomOf="@+id/id_nama"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/id_desk"
                android:layout_width="156dp"
                android:layout_height="129dp"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/fhome_desk"
                android:textColor="@color/texUtama"
                android:textSize="@dimen/dimen9"
                app:fontFamily="@font/merienda_one"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.258"
                app:layout_constraintStart_toEndOf="@+id/id_profileGuntur"
                app:layout_constraintTop_toBottomOf="@+id/id_lahir"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="54dp"
                android:layout_height="59dp"
                android:onClick="buka_map"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.829"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.42"
                app:srcCompat="@drawable/ic_map" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/merienda_one"
                android:text="@string/account_contactme"
                android:textColor="@color/texUtama"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.116"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.334" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/merienda_one"
                android:text="Social Media"
                android:textColor="@color/texUtama"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.524" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="252dp"
                android:fontFamily="@font/merienda_one"
                android:text="@string/account_phone_number"
                android:textColor="@color/texUtama"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.07"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="59dp"
                android:layout_height="51dp"
                android:onClick="buka_ig"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.138"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.649"
                app:srcCompat="@drawable/ic_instagram" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="59dp"
                android:layout_height="51dp"
                android:onClick="buka_fb"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.649"
                app:srcCompat="@drawable/ic_facebook" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_about"
                android:fontFamily="@font/merienda_one"
                android:onClick="buka_dialog"
                android:text="ABOUT APPS"
                android:textColor="@color/cardview_light_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.516"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.934" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="59dp"
                android:layout_height="51dp"
                android:onClick="buka_email"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.901"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.652"
                app:srcCompat="@drawable/ic_email" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</RelativeLayout>